--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,38 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
+  <ion-toolbar >
+    <ion-title *ngIf="userLogged!=null">
+      Usuarios ({{userLogged?.name}})
     </ion-title>
+    <ion-button slot="end" (click)="logOut()" padding>
+      <ion-icon name="person" size="medium"></ion-icon>
+      Cerrar Sesión
+    </ion-button>
+    <ion-button *ngIf="authService.isUserAdmin$ | async" slot="end" (click)="editUser()" padding>
+      <ion-icon slot="icon-only" name="add"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!--ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header-->
 
-  <div id="container">
+  <!--div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  </div-->
+  <ion-list>
+    <ion-item *ngFor="let u of (users | async)">
+      <ion-avatar slot="start">
+        <ion-icon name="person" size="large"></ion-icon>
+      </ion-avatar>
+      <ion-label>{{ u.userName }}</ion-label>
+      <ion-icon name="pencil" (click)="editUser(u.id)"></ion-icon>
+      <ion-icon name="blank"></ion-icon>
+      <ion-icon name="trash" (click)="presentAlertConfirm(u)"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
